--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,9 +1,9 @@
 :root {
-    --lightgrey: #818181;
-    --grey: #303030;
-    --white: #FFFFFF;
-    --blue: #007aff;
-    --darkblue: #00043e;
+    --cinza-claro: #818181;
+    --cinza: #303030;
+    --branco: #FFFFFF;
+    --azul: #007aff;
+    --azul-escuro: #00043e;
 
 
 }
