--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
-
-/*
+    /*
 Theme Name: Landing Page Kenzie Academy
 Theme URI: https://kenzie.com.br/
 Author: Kenzie Academy 
@@ -23,81 +22,262 @@ ESTRUTURAÇÃO BASE
 family=Montserrat -> Menus
 family=Lato -> Títulos, textos
 */
-
-/* FONTS */
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-/* FONTS */
-
-/* VARIÁVEIS */
-:root{}
-  
-/* GERAL */
-html, body, figure, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-    list-style: none;
+    /* FONTS */
+    
+    @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+    /* FONTS */
+    /* VARIÁVEIS */
+    
+     :root {}
+    /* GERAL */
+    
+    html,
+    body,
+    figure,
+    div,
+    input,
+    textarea,
+    p,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    ul {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: sans-serif;
+        list-style: none;
+    }
 }
-img{
+img {
     max-width: 800px;
 }
-div.flex{
+div.flex {
     display: flex;
 }
-div.full-container{
+div.full-container {
     width: 100%;
     max-width: 1850px;
-    margin:0 auto;
+    margin: 0 auto;
 }
-div.large-container{
+div.large-container {
     width: 100%;
     max-width: 1170px;
-    margin:0 auto;
+    margin: 0 auto;
 }
-div.container{
+div.container {
     width: 100%;
     max-width: 1140px;
-    margin:0 auto;
+    margin: 0 auto;
 }
+
 /* GERAL */
-  
+
 /* HTML */
-html{}
+html {}
+
 /* HTML */
-  
+
 /* BODY */
-body{}
+body {}
+
 /* BODY */
-  
+
 /* HEADER */
-header{}
+header {}
+
 /* HEADER */
-  
+
 /* FOOTER */
-footer{}
+footer {}
+
 /* FOOTER */
 
 /* INICIAL */
-main{}
+main {}
+
 /* INICIAL */
 
 /* EXTRAS */
 
 /* para estilizar a scrollbar */
-::-webkit-scrollbar{}
-::-webkit-scrollbar-button{}
-::-webkit-scrollbar-track{}
-::-webkit-scrollbar-track-piece{}
-::-webkit-scrollbar-thumb{}
-::-webkit-scrollbar-corner{}
-::-webkit-resizer{}
+ ::-webkit-scrollbar {}
+ ::-webkit-scrollbar-button {}
+ ::-webkit-scrollbar-track {}
+ ::-webkit-scrollbar-track-piece {}
+ ::-webkit-scrollbar-thumb {}
+ ::-webkit-scrollbar-corner {}
+ ::-webkit-resizer {}
 
 /* EXTRAS */
-  
 
 /* MEDIA QUERIES */
-    @media screen and (min-width: 400px) {}
-  
-    @media screen and (min-width: 800px) {}
-/* MEDIA QUERIES */
+@media only screen and (min-width: 320px) {
+    body {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    
+    .large-container nav {
+        display: none;
+        border: springgreen 4px solid;
+    }
+    
+    .topo img {
+        width: 45px;
+        /* background-image: url(../img/background-destaque.webp); */
+    }
+    
+    .topo {
+        margin: 0% auto;
+        flex-grow: 1;
+        flex-direction: column-reverse;
+        justify-content: left;
+        padding: 10px;
+    }
+    
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-image: url(../img/background-destaque.webp);
+    }
+    
+    */ .large-container {
+        flex-grow: 0;
+        flex-basis: 25px;
+    }
+    /*   cabeçalio                 */
+    
+    main {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .secaoDestaque {
+        color: white;
+        flex-direction: column;
+        flex-grow: 1;
+        align-items: stretch justify-content: center;
+    }
+    
+    .secaoDestaque h2 {
+        justify-content: center;
+        text-align: center;
+        font-weight: lighter;
+        padding: 0px 60px;
+        flex-grow: 0;
+    }
+    
+    .secaoDestaque p {
+        margin: 10px;
+        text-align: center;
+    }
+    
+    .secaoDestaqueFormulario button {
+        font-size: 14px;
+        height: 2.5em;
+        border-radius: 0% 5% 5% 0%;
+        border: 0px;
+        color: white;
+        background-color: #007aff;
+    }
+    
+    .secaoDestaqueFormulario input {
+        font-size: 14px;
+        height: 2.5em;
+        border-radius: 5% 0% 0% 5%;
+        border: 0px black solid;
+    }
+    
+    .secaoDestaqueFormulario {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .secaoCursos {
+        display: flex;
+        flex-direction: column;
+        background-color: white;
+    }
+    
+    .topCursos {
+        margin-bottom: 50px;
+    }
+    
+    .topCursos h2 {
+        margin: 25px;
+    }
+    
+    .secaoCursos img {
+        width: 100px;
+    }
+    
+    .secaoCursos article {
+        text-align: center;
+    }
+    
+    .secaoCursos article ul {
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+        font-weight: bold;
+    }
+    
+    .secaoCursos article li h3 {
+        text-align: center;
+        margin: 20px 0px;
+        font-weight: bold;
+    }
+    
+    .secaoCursos article li p {
+        line-height: 2;
+        text-align: center;
+        font-weight: lighter;
+    }
+    
+    .secaoCalendar {
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .secaoCalendar h2 {
+        margin: 10px 0px;
+        border: tomato 2px solid;
+    }
+    
+    .calendario {
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        width: 200px;
+        border: tomato 2px solid;
+        margin: 50px;
+    }
+    
+    .calendario h3 {
+        margin-top: 30px;
+        font-size: 19px;
+    }
+    
+    .calendario-data {
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        font-size: 36px;
+        box-sizing: content-box;
+        width: 100%;
+        height: 100%;
+        padding: 30px 100px;
+        border: 2px solid blue;
+    }
+    /* MEDIA QUERIES */
