--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ family=Lato -> Títulos, textos
     /* VARIÁVEIS */
     
      :root {}
+    
+    .hidden {
+        display: none;
+    }
     /* GERAL */
     
     html,
@@ -117,39 +121,74 @@ main {}
 /* MEDIA QUERIES */
 @media only screen and (min-width: 320px) {
     body {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-    
-    .large-container nav {
-        display: none;
-        border: springgreen 4px solid;
-    }
-    
-    .topo img {
-        width: 45px;
-        /* background-image: url(../img/background-destaque.webp); */
-    }
-    
-    .topo {
-        margin: 0% auto;
-        flex-grow: 1;
-        flex-direction: column-reverse;
-        justify-content: left;
-        padding: 10px;
-    }
-    
-    body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
         background-image: url(../img/background-destaque.webp);
     }
     
-    */ .large-container {
-        flex-grow: 0;
-        flex-basis: 25px;
+    .large-container nav {
+        border: black 1px solid;
+        position: absolute;
+        background-color: rgb(22, 39, 194);
+        right: 100%;
+        top: 0;
+        padding: 45px 20px;
+        text-align: left;
+        font-weight: bolder;
+        width: 224px;
+        height: 50%;
+    }
+    
+    .large-container li a {
+        color: ivory;
+    }
+    
+    .topo .large-container input:checked~nav {
+        right: 0%;
+        transition: 0.5s;
+    }
+    
+    .topo .large-container input {
+        display: none;
+    }
+    
+    body header label {
+        border: solid 1px #000;
+        width: 35px;
+        border-radius: 5px;
+        position: absolute;
+        right: 10px;
+        padding: 3px;
+        z-index: 3;
+        cursor: pointer;
+    }
+    
+    body header>label span {
+        display: block;
+        width: 70%;
+        height: 3px;
+        background-color: rgb(243, 236, 236);
+        border-radius: 5px;
+        margin: 5px auto 5px;
+    }
+    
+    .large-container {}
+    
+    .large-container figure {
+        margin: 0% auto;
+    }
+    
+    .topo .large-container img {
+        width: 45px;
+    }
+    
+    .large-container li a {
+        color: ivory;
+    }
+    
+    .topo {
+        width: 100%;
+        height: 48px;
+        margin: 0% auto;
+        display: inline-block;
     }
     /*   cabeçalio                 */
     
@@ -162,7 +201,8 @@ main {}
         color: white;
         flex-direction: column;
         flex-grow: 1;
-        align-items: stretch justify-content: center;
+        align-items: stretch;
+        justify-content: center;
     }
     
     .secaoDestaque h2 {
@@ -243,41 +283,171 @@ main {}
     
     .secaoCalendar {
         background-color: white;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .calendario {
+        width: 220px;
+        border: rgb(0, 0, 0) 1px solid;
+        margin: 0 auto;
+    }
+    
+    .calendario-data {
+        position: relative;
+        display: inline-block;
+        width: 100%;
+        height: 80px;
+        font-size: 36px;
+        text-align: center;
+        padding-top: 40px;
+        border: 1px solid blue;
+        background-color: rgb(7, 7, 102);
+        color: white;
+    }
+    
+    .secaoCalendar h2 {
+        margin: 50px 0px;
+    }
+    
+    .calendario h3 {
+        margin: 30px 0px;
+        font-size: 19px;
+    }
+    
+    .calendario p {
+        font-weight: lighter;
+        font-size: 16px;
+        text-align: center;
+        padding: 0px 4px;
+    }
+    
+    .calendario-data-rodape {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: 80px;
+        margin: 20px 0px;
+    }
+    
+    .calendario-data-rodape span {
+        align-items: center;
+        font-size: 36px;
+        margin-bottom: 15px;
+    }
+    
+    .calendario-data-rodape button {
+        position: relative;
+        bottom: 0%;
+        width: 180px;
+        padding: 10px;
+        background-color: #007aff;
+        color: white;
+        font-size: 14px;
+        font-weight: lighter;
+        border-radius: 5%;
+    }
+    
+    .secaoContato {
+        display: inline-block;
+        position: relative;
+        background-color: white;
+        text-decoration: none;
+        font-weight: lighter;
+        width: 100%;
+        margin: 0% auto;
+    }
+    
+    .secaoContato .flex {
+        background-color: white;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        text-align: center;
+        margin: 0% auto;
+        margin-top: 35px;
+        width: 300px;
     }
     
-    .secaoCalendar h2 {
-        margin: 10px 0px;
-        border: tomato 2px solid;
+    .secaoContato .flex .flex-col {
+        margin: 25px;
     }
     
-    .calendario {
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        width: 200px;
-        border: tomato 2px solid;
-        margin: 50px;
+    .secaoContato .flex .flex-col .secaoContato-informacoes {
+        display: inline-block;
     }
     
-    .calendario h3 {
-        margin-top: 30px;
-        font-size: 19px;
+    .secaoContato .flex .flex-col .secaoContato-informacoes p {
+        margin: 5px 0px;
+        line-height: 1.8;
     }
     
-    .calendario-data {
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        font-size: 36px;
-        box-sizing: content-box;
+    .secaoContato .flex .flex-col .secaoContato-informacoes ul {
+        line-height: 2;
+    }
+    
+    .secaoContato .flex .flex-col .secaoContato-informacoes li a {}
+    
+    .secaoContato .flex .flex-col h2 {
+        display: inline-block;
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translateX(-50%);
+        margin-top: 25px;
+    }
+    
+    .secaoContato .flex .flex-col .form-input-model {
+        display: inline-block;
         width: 100%;
-        height: 100%;
-        padding: 30px 100px;
-        border: 2px solid blue;
+    }
+    
+    .secaoContato .flex .flex-col .form-input-model input {
+        width: 100%;
+        height: 40px;
+        margin: 5px 0px;
+    }
+    
+    .secaoContato .flex .flex-col .form-input-model #mensagem {
+        width: 100%;
+        height: 100px;
+    }
+    
+    .secaoContato .flex .flex-col .form-input-model label {
+        display: none;
+    }
+    
+    .secaoContato .flex .flex-col .form-submit-model input {
+        border: 1px black solid;
+        float: right;
+        width: 20%;
+        height: 30px;
+        border-radius: 5px;
+    }
+    
+    @media only screen and (min-width:1024px) {
+        body {
+            background-image: url(../img/background-destaque.webp);
+        }
+        .topo label {
+            display: none;
+        }
+        .large-container nav {
+            border: none;
+            display: flex;
+            height: auto;
+            width: 100%;
+            flex-direction: column;
+            justify-content: left;
+            background-color: transparent;
+            border: tomato 2px solid;
+        }
+        .large-container ul {
+            flex-direction: column-reverse;
+            flex-grow: 1;
+            border: tomato 2px solid;
+        }
+        .topo .large-container input:checked~nav {}
     }
     /* MEDIA QUERIES */
