--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-    /*
+/*
 Theme Name: Landing Page Kenzie Academy
 Theme URI: https://kenzie.com.br/
 Author: Kenzie Academy 
@@ -22,39 +22,48 @@ ESTRUTURAÇÃO BASE
 family=Montserrat -> Menus
 family=Lato -> Títulos, textos
 */
-    /* FONTS */
-    
-    @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    /* FONTS */
-    /* VARIÁVEIS */
-    
-     :root {}
-    
-    .hidden {
-        display: none;
-    }
-    /* GERAL */
-    
-    html,
-    body,
-    figure,
-    div,
-    input,
-    textarea,
-    p,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    ul {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: sans-serif;
-        list-style: none;
-    }
+
+
+/* FONTS */
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* FONTS */
+
+
+/* VARIÁVEIS */
+
+ :root {}
+
+.hidden {
+    display: none;
+}
+
+
+/* GERAL */
+
+html,
+body,
+figure,
+div,
+input,
+textarea,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    list-style: none;
+}
+
+
 }
 img {
     max-width: 800px;
@@ -128,8 +137,8 @@ main {}
         border: black 1px solid;
         position: absolute;
         background-color: rgb(22, 39, 194);
-        right: 100%;
-        top: 0;
+        /* right: 100%;
+        top: 0; */
         padding: 45px 20px;
         text-align: left;
         font-weight: bolder;
@@ -430,7 +439,7 @@ main {}
         border-radius: 5px;
     }
     
-    @media only screen and (min-width:1024px) {
+    @media only screen and (min-width:769px) {
         body {
             background-image: url(../img/background-destaque.webp);
         }
@@ -438,19 +447,13 @@ main {}
             display: none;
         }
         .large-container nav {
-            border: none;
             display: flex;
-            height: auto;
-            width: 100%;
-            flex-direction: column;
-            justify-content: left;
+            flex-direction: row;
             background-color: transparent;
-            border: tomato 2px solid;
         }
         .large-container ul {
-            flex-direction: column-reverse;
-            flex-grow: 1;
-            border: tomato 2px solid;
+            display: flex;
+            flex-direction: row;
         }
         .secaoCursos article ul {
             max-width: 1000px;
@@ -476,8 +479,38 @@ main {}
             width: 100%;
         }
         .secaoDestaqueFormulario input {
+            padding: 15px;
             width: 20%;
         }
-        1 .secaoContato .flex .flex-col .form-input-model input {}
+        .flex-col .Contatoflex {
+            display: flex;
+            flex-direction: row;
+            width: 100%;
+        }
+        .secaoContato .flex .flex-col .form-input-model input {}
+        #mensagem {
+            width: 100%;
+            height: 100px;
+        }
+        .large-container nav {
+            position: absolute;
+            border: black 1p solid;
+            width: 34%;
+            padding: 0;
+            margin: 0% autp;
+            font-weight: bolder;
+            text-align: center;
+            top: 0%;
+            left: 65%;
+            height: auto;
+            display: flex;
+            flex-direction: row;
+        }
     }
-    /* MEDIA QUERIES */
+    
+    .large-container li a {
+        margin: 0px;
+    }
+}
+
+/* MEDIA QUERIES */
