--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,129 +1,43 @@
-    /*
-Theme Name: Landing Page Kenzie Academy
-Theme URI: https://kenzie.com.br/
-Author: Kenzie Academy 
-Author URI: https://kenzie.com.br/
-Description: Descrção do thema.
-Version: 1.0
-Text Domain: https://kenzie.com.br/
-
---------------------------------------------
-ESTRUTURAÇÃO BASE
---------------------------------------------
-**** DECLARAÇÃO DE VARIÁVEIS
-**** ESTILOS GERAIS
-**** BODY
-**** HEADER
-**** FOOTER
-**** PÁGINA INICIAL
-**** EXTRAS
-**** @MEDIA
-
-family=Montserrat -> Menus
-family=Lato -> Títulos, textos
-*/
-    /* FONTS */
-    
-    @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    /* FONTS */
-    /* VARIÁVEIS */
-    
-     :root {}
-    
-    .hidden {
-        display: none;
-    }
-    /* GERAL */
-    
-    html,
-    body,
-    figure,
-    div,
-    input,
-    textarea,
-    p,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    ul {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: sans-serif;
-        list-style: none;
-    }
-}
-img {
-    max-width: 800px;
-}
-div.flex {
-    display: flex;
-}
-div.full-container {
-    width: 100%;
-    max-width: 1850px;
-    margin: 0 auto;
-}
-div.large-container {
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
-}
-div.container {
-    width: 100%;
-    max-width: 1140px;
-    margin: 0 auto;
-}
+/* FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /* GERAL */
+html,
+body,
+figure,
+div,
+input,
+textarea,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    list-style: none;
+}
+.hidden, figcaption {
+    display: none;
+}
 
-/* HTML */
-html {}
+h2 {
+    font-family: 'Montserrat', sans-serif;
+}
 
-/* HTML */
 
-/* BODY */
-body {}
-
-/* BODY */
-
-/* HEADER */
-header {}
-
-/* HEADER */
-
-/* FOOTER */
-footer {}
-
-/* FOOTER */
-
-/* INICIAL */
-main {}
-
-/* INICIAL */
-
-/* EXTRAS */
-
-/* para estilizar a scrollbar */
- ::-webkit-scrollbar {}
- ::-webkit-scrollbar-button {}
- ::-webkit-scrollbar-track {}
- ::-webkit-scrollbar-track-piece {}
- ::-webkit-scrollbar-thumb {}
- ::-webkit-scrollbar-corner {}
- ::-webkit-resizer {}
-
-/* EXTRAS */
+/*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  */
 
 /* MEDIA QUERIES */
 @media only screen and (min-width: 320px) {
-    body {
-        background-image: url(../img/background-destaque.webp);
-    }
+    /*   GERAL   */
     
+    /*   CABEÇALHO/TOPO  */
     .large-container nav {
         border: black 1px solid;
         position: absolute;
@@ -170,8 +84,6 @@ main {}
         margin: 5px auto 5px;
     }
     
-    .large-container {}
-    
     .large-container figure {
         margin: 0% auto;
     }
@@ -190,19 +102,21 @@ main {}
         margin: 0% auto;
         display: inline-block;
     }
-    /*   cabeçalio                 */
-    
+
+    /*   CABEÇALHO SESSÃO DESTAQUE  */
     main {
         display: flex;
         flex-direction: column;
     }
     
     .secaoDestaque {
-        color: white;
+        background-color: var(--azul-escuro);
+        color: var(--branco);
         flex-direction: column;
         flex-grow: 1;
         align-items: stretch;
         justify-content: center;
+        padding-bottom: 30px;
     }
     
     .secaoDestaque h2 {
@@ -211,13 +125,16 @@ main {}
         font-weight: lighter;
         padding: 0px 60px;
         flex-grow: 0;
+        font-size: 63px;
     }
     
     .secaoDestaque p {
         margin: 10px;
         text-align: center;
+        font-size: 21px;
     }
     
+    /*   FORMULARIO   */
     .secaoDestaqueFormulario button {
         font-size: 14px;
         height: 2.5em;
@@ -240,6 +157,66 @@ main {}
         align-items: center;
     }
     
+    /* SOBRE */
+    .secaoSobre figure {
+        text-align: center;
+    }
+    .secaoSobre button {
+        margin-top: 50px;
+        text-align: center;
+        font-size: 16px;
+        padding: 18px 80px;
+        border-radius: 5px;
+        border-color: lightgray;
+        background-color: white;
+        border-style:double;
+    }
+    /* PYTHON SECTION*/
+    .pythonImg {
+        padding-bottom: 50px;
+    }
+
+    .pythonText {
+        padding: 25px;
+        line-height: 2em;
+        margin: 50px;;
+    }
+    .pythonText  h2 {
+        font-size: 24px;
+        padding: 0px 0px 60px 0px;
+    }
+    .pythonText  p {
+        font-size: 19px;
+        font-weight: 500;
+        padding-bottom: 50px;
+
+    }
+    #pythonParagraph {
+        color: var(--cinza-claro);       
+    }
+
+
+    /* JAVASCRIPT SECTION */
+    .js {
+        background-color: rgb(241, 239, 239);
+    }
+    .js h2 {
+        margin: 20px 50px 30px 100px; 
+
+   }
+    .js ul {
+        margin: 60px 75px 70px 75px;
+        padding-left: 30px;
+        padding-bottom: 50px;
+        list-style:disc;
+        color:gray;
+        line-height: 2.0;
+    }
+    .jsImg{
+        padding-top: 50px;
+    }
+    
+    /*   CURSOS   */
     .secaoCursos {
         display: flex;
         flex-direction: column;
@@ -280,7 +257,14 @@ main {}
         text-align: center;
         font-weight: lighter;
     }
+    .secaoCursos h3 {
+        font-size: 19px;
+    }
+    .secaoCursos p {
+        font-size: 15px;
+    }
     
+    /*   CALENDARIO   */
     .secaoCalendar {
         background-color: white;
         align-items: center;
@@ -321,7 +305,7 @@ main {}
     
     .calendario p {
         font-weight: lighter;
-        font-size: 16px;
+        font-size: 15px;
         text-align: center;
         padding: 0px 4px;
     }
@@ -348,11 +332,12 @@ main {}
         padding: 10px;
         background-color: #007aff;
         color: white;
-        font-size: 14px;
+        font-size: 32px;
         font-weight: lighter;
         border-radius: 5%;
     }
-    
+
+    /*   CONTATO   */
     .secaoContato {
         display: inline-block;
         position: relative;
@@ -361,6 +346,7 @@ main {}
         font-weight: lighter;
         width: 100%;
         margin: 0% auto;
+        font-size: 15px;
     }
     
     .secaoContato .flex {
@@ -389,10 +375,13 @@ main {}
     
     .secaoContato .flex .flex-col .secaoContato-informacoes ul {
         line-height: 2;
+    }    
+    .secaoContato h2 {
+        font-size: 32px;
+        text-transform: uppercase;
+        text-align: center;
     }
-    
-    .secaoContato .flex .flex-col .secaoContato-informacoes li a {}
-    
+
     .secaoContato .flex .flex-col h2 {
         display: inline-block;
         position: absolute;
@@ -429,11 +418,14 @@ main {}
         height: 30px;
         border-radius: 5px;
     }
-    
+    footer{
+        display: none;
+    }
+
+    /*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  *//*  */
     @media only screen and (min-width:1024px) {
-        body {
-            background-image: url(../img/background-destaque.webp);
-        }
+
+        /*   TOPO   */
         .topo label {
             display: none;
         }
@@ -452,6 +444,11 @@ main {}
             flex-grow: 1;
             border: tomato 2px solid;
         }
+        /*   DESTAQUE */
+        .secaoDestaque {
+        background-image: url(../img/background-destaque.webp);
+        }
+        /*   CURSOS   */
         .secaoCursos article ul {
             max-width: 1000px;
             display: flex;
@@ -461,6 +458,8 @@ main {}
             margin: 0 auto;
             /* border: steelblue 2px solid; */
         }
+
+        /*   CALENDARIO   */
         .calendario {
             display: flex;
             flex-direction: row;
@@ -471,13 +470,27 @@ main {}
             margin: 20px;
             justify-content: space-between;
         }
+
+        /*   CONTATO   */
         .secaoContato .flex {
             flex-direction: row;
             width: 100%;
         }
+
         .secaoDestaqueFormulario input {
             width: 20%;
         }
-        1 .secaoContato .flex .flex-col .form-input-model input {}
     }
-    /* MEDIA QUERIES */
+
+
+
+
+
+/* para estilizar a scrollbar */
+::-webkit-scrollbar{}
+::-webkit-scrollbar-button{}
+::-webkit-scrollbar-track{}
+::-webkit-scrollbar-track-piece{}
+::-webkit-scrollbar-thumb{}
+::-webkit-scrollbar-corner{}
+::-webkit-resizer{}
