--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,7 +128,8 @@ img {
         flex-grow: 1;
         align-items: stretch;
         justify-content: center;
-        padding-bottom: 30px;
+        padding-bottom: 50px;
+        padding-top: 20px;
     }
     
     .secaoDestaque h2 {
@@ -138,6 +139,7 @@ img {
         padding: 0px 60px;
         flex-grow: 0;
         font-size: 63px;
+        margin: 50px 0px 50px 0px;
     }
     
     .secaoDestaque p {
@@ -172,39 +174,40 @@ img {
     /* SOBRE */
 
     .python {
-        margin: 100px;
     }
     .secaoSobre figure {
         text-align: center;
     }
     .secaoSobre button {
-        margin-top: 50px;
+        margin-top: 35px;
         text-align: center;
         font-size: 16px;
         padding: 18px 80px;
         border-radius: 5px;
-        border-color: lightgray;
-        background-color: white;
+        border-color: var(--cinza-claro);
+        background-color: var(--branco);
         border-style:double;
     }
     /* PYTHON SECTION*/
-    .pythonImg {
-        padding: ;
+    .pythonImg img{
+        height:180px;
+        padding-top: 10px;
+        padding-bottom: 50px;
     }
 
     .pythonText {
-        padding: 25px;
+        padding: 0px 25px 35px 25px;
         line-height: 2em;
-        margin: 50px;;
+        margin: 20px;;
     }
     .pythonText  h2 {
         font-size: 24px;
-        padding: 0px 0px 60px 0px;
+        padding: 50px 0px 40px 0px;
     }
     .pythonText  p {
         font-size: 19px;
         font-weight: 500;
-        padding-bottom: 50px;
+        padding-bottom: 25px;
 
     }
     #pythonParagraph {
@@ -228,8 +231,9 @@ img {
         color: var(--cinza);
         line-height: 2.0;
     }
-    .jsImg{
-        padding-top: 50px;
+    .jsImg img{
+        padding-top: 55px;
+        width: 150px;
     }
     
     /*   CURSOS   */
@@ -285,6 +289,7 @@ img {
         background-color: white;
         align-items: center;
         text-align: center;
+        margin-top: 50px;
     }
     
     .secaoCalendar .calendario {
@@ -309,6 +314,10 @@ img {
         border: black 2px solid;
         margin-bottom: 40px;
     }
+    .secaoCalendar p {
+        margin-top: -25px;
+        margin-bottom: 40px;
+    }
     
     .secaoCalendar h2 {
         margin: 50px 0px;
@@ -331,7 +340,7 @@ img {
         flex-direction: column;
         align-items: center;
         width: 100%;
-        height: 80px;
+        height: 105px;
         margin: 20px 0px;
     }
     
@@ -351,6 +360,8 @@ img {
         font-size: 32px;
         font-weight: lighter;
         border-radius: 5%;
+        margin-left: 12px;
+        margin-right: 12px;
     }
 
     /*   CONTATO   */
@@ -362,11 +373,14 @@ img {
         font-weight: lighter;
         width: 100%;
         margin: 0% auto;
-        font-size: 15px;
+        width: 100%;
+        background-color: var(--cinza-claro);
+        margin-top: 50px;
+        padding-bottom: 50px;
+        padding-top: 100px;
     }
     
-    .secaoContato .flex {
-        background-color: white;
+    .secaoContato-informacoes {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -375,62 +389,61 @@ img {
         margin-top: 35px;
         width: 300px;
     }
-    
-    .secaoContato .flex .flex-col {
-        margin: 25px;
-    }
-    
-    .secaoContato .flex .flex-col .secaoContato-informacoes {
-        display: inline-block;
-    }
-    
-    .secaoContato .flex .flex-col .secaoContato-informacoes p {
-        margin: 5px 0px;
-        line-height: 1.8;
-    }
-    
-    .secaoContato .flex .flex-col .secaoContato-informacoes ul {
-        line-height: 2;
-    }    
-    .secaoContato h2 {
-        font-size: 32px;
-        text-transform: uppercase;
-        text-align: center;
-    }
 
-    .secaoContato .flex .flex-col h2 {
+    .secaoContato-informacoes p {
+        margin: 5px 
+        line-height: 1.8;
+        font-size: 15px;
+    }
+    
+    .secaoContato-informacoes ul {
+        line-height: 2;
+    
+    }    
+
+    .secaoContatoInput {
+        text-align: center;
+        margin-top: 50px;
+    }
+    
+    .secaoContatoInput h2 {
         display: inline-block;
         position: absolute;
         top: 0%;
         left: 50%;
         transform: translateX(-50%);
-        margin-top: 25px;
+        margin-top: 45px;
+        font-size: 32px;
+        text-transform: uppercase;
+        font-weight: 500;
     }
-    
-    .secaoContato .flex .flex-col .form-input-model {
+
+    .form-input-model {
         display: inline-block;
         width: 100%;
     }
     
-    .secaoContato .flex .flex-col .form-input-model input {
+    .form-input-model input {
         width: 100%;
         height: 40px;
         margin: 5px 0px;
     }
     
-    .secaoContato .flex .flex-col .form-input-model #mensagem {
-        width: 100%;
-        height: 100px;
-    }
-    
-    .secaoContato .flex .flex-col .form-input-model label {
+    .form-input-model label {
         display: none;
     }
-    
-    .secaoContato .flex .flex-col .form-submit-model input {
+    #mensagem {
+        width: 275px;
+        height: 130px;
+    }
+    #email, #nome {
+        margin: 0;
+        width: 275px;
+    }
+    .form-submit-model input {
         border: 1px black solid;
-        float: right;
-        width: 20%;
+        width: 90px;
+        margin-left: 185px;;
         height: 30px;
         border-radius: 5px;
     }
@@ -464,39 +477,41 @@ img {
         /*   DESTAQUE */
         .secaoDestaque {
             background-image: url(../img/background-destaque.webp);
-            height: 700px;
+            background-size: 1125px;
+            height: 300px;
             display: flex;
         }
 
         /* SOBRE */
         .python {
-            margin: 150px;
+            margin: 20px;
             display:flex;
             justify-content: center;
             flex-direction: row;
         }
 
         .pythonImg img {
-            height: 400px;
-            padding-top: 50px;
+            height: 200px;
+            padding-top: 100px;
+
         }
 
         .pythonText {
-            margin-left: 300px;
+            margin-left: 100px;
             margin-right: 50px;
         }
         .js {
             display:flex;
             justify-content: center;
             flex-direction: row;
-            padding: 150px 150px 150px;
+            padding: 30px 40px 30px 0px;
         }
         .jsImg img {
-            width: 400px;
+            width: 170px;
         }
 
         .jsText {
-            padding: 70px;
+            padding: 30px;
         }
         /*   CURSOS   */
 
@@ -528,20 +543,28 @@ img {
         }
 
         /*   CONTATO   */
-        .secaoContato .flex {
+        .secaoContato {
+            display: flex;
             flex-direction: row;
-            width: 100%;
-            background-color: var(--cinza-claro);
-            margin-top: 10px;
-            padding-top: 50px;
+        }
+
+        .secaoContato h2 {
+            padding-left: 500px;
+            width: 375px;
         }
 
         .secaoDestaqueFormulario input {
             width: 20%;
         }
 
+        .form-submit-model input {
+            margin-left: 275px;
+            width: 100px;
+            height: 35px;
+            border-radius: 5px;
+        }
         footer{
-            display:flex;
+            display:none;
             justify-content: center;
         }
     }
