--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -1,9 +1,8 @@
 :root {
-    --cinza-claro: #818181;
+    --cinza-claro: rgba(129,129,129, 0.25);
     --cinza: #303030;
     --branco: #FFFFFF;
     --azul: #007aff;
     --azul-escuro: #00043e;
-    
     }
     
