--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@ body,
 figure,
 div,
 input,
+button,
 textarea,
 p,
 h1,
@@ -21,8 +22,8 @@ ul {
     box-sizing: border-box;
     font-family: sans-serif;
     list-style: none;
-    max-width: 1126px;
     margin: 0 auto;
+
 }
 .hidden, figcaption {
     display: none;
@@ -55,7 +56,6 @@ img {
     position: absolute;
     background-color: var(--azul);
     right: 100%;
-    top: 0;
     padding: 45px 20px;
     text-align: left;
     font-weight: bolder;
@@ -146,8 +146,7 @@ img {
         background-color: var(--azul-escuro);
         color: var(--branco);
         flex-direction: column;
-        flex-grow: 1;
-        align-items: stretch;
+        align-items: center;
         justify-content: center;
         padding-bottom: 50px;
         padding-top: 20px;
@@ -173,10 +172,13 @@ img {
     .secaoDestaqueFormulario button {
         font-size: 14px;
         height: 2.5em;
+      
+        width: 120px;
         border-radius: 0% 5% 5% 0%;
         border: 0px;
         color: white;
         background-color: #007aff;
+        margin:0;
     }
 
     .secaoDestaqueFormulario button:hover {
@@ -192,11 +194,16 @@ img {
         height: 2.5em;
         border-radius: 5% 0% 0% 5%;
         border: 0px black solid;
+        margin:0;
     }
     
-    .secaoDestaqueFormulario {
+    .secaoDestaqueFormulario  {
+        display: flex;
+        justify-content: center;
         text-align: center;
         align-items: center;
+        margin:0;
+
     }
     
     /* SOBRE */
@@ -226,7 +233,7 @@ img {
 
     /* PYTHON SECTION*/
     .pythonImg img{
-        height:180px;
+        height:170px;
         padding-top: 10px;
         padding-bottom: 50px;
     }
@@ -352,7 +359,7 @@ img {
     }
     .secaoCalendar p {
         margin-top: -25px;
-        margin-bottom: 40px;
+        margin-bottom: 10px;
     }
     
     .secaoCalendar h2 {
@@ -369,6 +376,14 @@ img {
         font-size: 15px;
         text-align: center;
         padding: 0px 4px;
+        margin-bottom: 10px;
+        line-height:1.5
+    }
+
+    .calHr {
+        border-top: 2px solid gray;
+        opacity: 0.2; 
+        margin-top: 25px;
     }
     
     .calendario-data-rodape {
@@ -377,7 +392,7 @@ img {
         align-items: center;
         width: 100%;
         height: 105px;
-        margin: 20px 0px;
+        margin: 20px 0px;;
     }
     
     .calendario-data-rodape span {
@@ -419,7 +434,7 @@ img {
         width: 100%;
         position: relative;
         background-color: var(--cinza-claro);
-        margin-top: 50px;
+        margin-top: 45px;
         padding-bottom: 50px;
         padding-top: 100px;
     }
@@ -434,43 +449,60 @@ img {
         width: 300px;
     }
 
-    .secaoContato-informacoes p {
-        margin: 5px 
-        line-height: 1.8;
-        font-size: 15px;
-    }
-    
-    .secaoContato-informacoes ul {
-        line-height: 2;
-    
-    }    
-
-    .secaoContatoInput {
-        text-align: center;
-        margin-top: 50px;
-    }
-    
     .secaoContatoInput h2 {
         display: inline-block;
         position: absolute;
         top: 0%;
         left: 50%;
         transform: translateX(-50%);
-        margin-top: 45px;
+        margin-top: 75px;
         font-size: 32px;
         text-transform: uppercase;
         font-weight: 500;
     }
+
+    .secaoContato-informacoes p {
+        margin: 25px;
+        line-height: 2;
+        font-size: 15px;
+    }
+    
+    .secaoContato-informacoes ul {
+        line-height: 2;
+        margin-bottom: 30px;
+        margin-left: 25px;
+    
+    }    
+    .secaoContato-informacoes ul img {
+        width: 18px;       
+        margin: 5px 5px 0px 0px;
+        padding: 5px 5px 0px 0px;
+ 
+    }
+    .secaoContatoInput {
+        text-align: center;
+        width: 100%;
+    }
+    
+    #nome, #email, #mensagem {
+        padding: 5px;
+    }
+    .contatoFlex {
+        display:inline
+    }
+   
 
     .form-input-model {
         display: inline-block;
         width: 100%;
     }
     
+    .form-input-model{
+    margin-bottom: 15px;}
+
     .form-input-model input {
         width: 100%;
         height: 40px;
-        margin: 5px 0px;
     }
     
     .form-input-model label {
@@ -484,6 +516,8 @@ img {
         margin: 0;
         width: 275px;
     }
+
+
     .form-submit-model input {
         border: 1px black solid;
         width: 90px;
@@ -495,8 +529,9 @@ img {
         background-color: var(--azul);
         border-radius: 6px;
         color: white;
+    }
     
-    footer{
+    footer {
         display: none;
     }
 }
@@ -539,21 +574,10 @@ img {
              */
 
 
-
-
-
-
-
-
-
-
-
-
-
         /*   DESTAQUE */
         .secaoDestaque {
             background-image: url(../img/background-destaque.webp);
-            background-size: 1125px;
+            background-size: 100%;
             height: 300px;
             display: flex;
         }
@@ -621,42 +645,88 @@ img {
         .secaoContato {
             display: flex;
             flex-direction: row;
+            padding-top: 135px;
+            margin-top: 0;
         }
-
-        .secaoContato h2 {
-            align-items: stretch;
-            padding-left: 340px;
-            padding-right: 20px;
+        .secaoContatoInput h2{
+            display: flex;
+            margin-left: 190px;
+        }
+        #email {
+            width: 192px;
+            float: right;
+        }
+        
+        #nome {
+            width: 192px;
+            float: left;
+        }
+        #mensagem{
             width: 400px;
         }
+        .secaoContato-informacoes {
+            margin-top: 0px;
+        }
 
+        .contatoFlex {
+            display: flex;
+           
+        }
+        .secaoContatoInput {
+            width: 400px;
+        }
         .secaoContato-informacoes p {
             margin: 0;
+            width: 200px;
+            margin-top: -25px;
+            margin-left: 50px;
+            padding-bottom: 20px;
             display: flex;
             justify-content: center;
             text-align: left;
-            padding-bottom: 50px;
-            padding-left: 60px;
         }
 
-        .secaoContato-informacoes {
- 
+    
+        .secaoContato-informacoes ul {
+            position: relative;
+            line-height: 2;
+            margin-bottom: 30px;
+            margin-left: 75px;
+        
+        }    
+        .secaoContato-informacoes ul img {
+            width: 18px;       
+            margin: 5px 5px 0px 0px;
+            padding: 5px 5px 0px 0px;
+     
         }
         .secaoDestaqueFormulario input {
             min-width: 400px;
         }
 
         .form-submit-model input {
+            float:right;
             margin-left: 175px;
             width: 100px;
             height: 35px;
             border-radius: 5px;
+            
         }
         footer{
             display:none;
             justify-content: center;
         }
     }
+
+    @media only screen and (min-width:983px) {
+
+        .secaoContato-informacoes p {
+            margin: 0;
+            width: 350px;
+            margin-top: -25px;
+            margin-left: 200px;
+    }
+
 
 /* para estilizar a scrollbar */
 ::-webkit-scrollbar{}
